# LPLANN

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/binary/: bin_wrappers.hpp  conv.hpp  fc.hpp  layer.hpp  tmp.hpp
src/construction/: CMakeLists.txt  config.hpp  example.json  input.cpp  input.hpp  layer.hpp  network.cpp  network.hpp
src/fixed_point/: CMakeLists.txt  fixed.hpp  layer.hpp
src/linalg/: CMakeLists.txt  dotproduct.md  error.cpp  error.hpp  error.md  mat1norm.md  mat2norm.md  matInfNorm.md  matadd.md  matmul.md  matop.cpp  matop.hpp  matop.md  matsub.md  matvecmul.md  norms.cpp  norms.hpp  norms.md  parmatmul.md  parmatop.cpp  parmatop.hpp  parmatop.md  parmatvecmul.md  print.cpp  print.hpp  print.md  scalemat.md  vec1error.md  vec1norm.md  vec2error.md  vec2norm.md  vecInfError.md  vecInfNorm.md
src/open_source/: CMakeLists.txt
src/open_source/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.hpp
src/open_source/jsoncpp/: CMakeLists.txt  jsoncpp.cpp
src/ops/: CMakeLists.txt  conv.cpp  conv.hpp  fc.hpp  matop.hpp  op_wrappers.hpp  parmatop.hpp  pooling.hpp  print.hpp  relu.hpp  softmax.hpp  zero.hpp
src/python_tests/: conv.py  fmnist.py  forward.py  graph.txt  layers.txt
src/types/: CMakeLists.txt  binary.hpp  fixed.hpp  matrix.hpp  types.hpp
test/: CMakeLists.txt  fixed.cpp  main.cpp  working_bin.cpp  working_demo.cpp
weights/: layer6.py
